# copilot-setup

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  cli.py  llm.txt  pyproject.toml  setup.ps1  setup.py  setup.sh
.github/workflows/: ci.yml  deploy-docs.yml  lint.yml  publish.yml
copilot_setup/: __init__.py  models.py  runner.py  ui_shim.py
copilot_setup/steps/: __init__.py  backup.py  config_links.py  config_patch.py  directories.py  git_auth.py  legacy_cleanup.py  lsp_config.py  mcp_build.py  mcp_config.py  mcp_env.py  plugin_update.py  plugins.py  shell_alias.py  skills.py  stale_cleanup.py  trusted_folders.py
docs/: mcp-oauth-and-plugins.md
lib/: __init__.py  backup.py  build_detect.py  config.py  git_helpers.py  optional_deps.py  platform_ops.py  restore.py  skills.py  sources.py  ui.py
src/copilotsetup/: __init__.py  __main__.py  app.py  app.tcss  backup.py  cli.py  config.py  deployed.py  doctor.py  git_helpers.py  init.py  models.py  oauth_status.py  optional_deps.py  platform_ops.py  plugin_upgrades.py  restore.py  runner.py  skills.py  sources.py  state.py  ui.py  update_sources.py  upgrade_cache.py
src/copilotsetup/data/: agents.py  base.py  environment.py  extensions.py  hooks.py  lsp_servers.py  marketplaces.py  mcp_servers.py  permissions.py  plugins.py  profiles.py  settings.py  skills.py
src/copilotsetup/screens/: __init__.py  action_screen.py  confirm_screen.py  help_screen.py  input_dialog.py
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_config_extra.py  test_data_agents.py  test_data_base.py  test_data_environment.py  test_data_extensions.py  test_data_hooks.py  test_data_lsp_servers.py  test_data_marketplaces.py  test_data_mcp_servers.py  test_data_permissions.py  test_data_plugins.py  test_data_profiles.py  test_data_settings.py  test_data_skills.py  test_deployed.py  test_doctor.py  test_file_io.py  test_init.py  test_mcp_config.py  test_models.py  test_oauth_status.py  test_platform_ops.py  test_plugin_disable.py  test_plugin_server_names.py  test_plugin_table.py  test_plugin_upgrades.py  test_runner.py  test_shell_alias_marketplace.py  test_sources.py  test_state.py  test_status_render.py  test_update_sources.py  test_upgrade_cache.py  test_widgets.py
website/: docusaurus.config.js  package-lock.json  sidebars.js
website/docs/: architecture.md  doctor.md  getting-started.md  key-bindings.md  troubleshooting.md
(+52 files in other folders)
