[project]
name = "copilot-setup"
version = "0.1.0"
description = "GitHub Copilot CLI configuration engine — discovers, merges, and deploys config from multiple sources"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["copilotsetup*"]

[project.scripts]
copilot-setup = "copilotsetup.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes basics
    "UP",             # pyupgrade — modernize syntax
    "SIM",            # flake8-simplify
    "I",              # isort — deterministic import ordering
    "B",              # flake8-bugbear — common bug patterns
    "A",              # flake8-builtins — don't shadow builtins
    "C4",             # flake8-comprehensions — better comprehensions
    "PIE",            # flake8-pie — misc improvements
    "PERF",           # perflint — performance anti-patterns
    "FLY",            # flynt — prefer f-strings
    "RUF",            # Ruff-specific rules
    "PTH",            # flake8-use-pathlib — prefer pathlib
    "RET",            # flake8-return — consistent returns
    "FBT",            # flake8-boolean-trap — no positional bools in APIs
    "PLC", "PLE",     # pylint convention + error subset
]
ignore = [
    "E402",           # module-level import not at top (needed for path setup)
    "E501",           # line length handled by formatter
    "SIM112",         # env var casing — Windows env vars are case-insensitive
    "RET504",         # unnecessary variable before return — hurts readability
    "FBT001", "FBT002", "FBT003", # boolean trap — too noisy for CLI tool internals
    "PTH123",         # builtin open() is fine
    "PERF203",        # try-except in loop — sometimes unavoidable
    "PLC0415",        # lazy imports are intentional for CLI startup performance
    "RUF001",         # Unicode symbols (ℹ, ✓, ✗, ⚠) are intentional UI icons
]

[tool.ruff.lint.per-file-ignores]
"external/**" = ["ALL"]
"tests/**" = ["B011"]  # assert True OK in tests

[tool.ruff.lint.isort]
known-first-party = ["copilotsetup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
